--- a/public/driver.html
+++ b/public/driver.html
@@ -9,9 +9,6 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Driver register</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -27,7 +24,7 @@
         <!-- Naigation bar -->
         <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
-                <ul class="menu simple vertical medium-horizontal">
+                <ul class="menu simple medium-horizontal">
                     <li>
                         <a href="http://localhost:8080/">Home</a></li>
                     <li>
@@ -72,10 +69,13 @@
         <input class="button expanded" type="submit" value="Sign up">
     </form>
 
-    <script src="js/vendor/jquery.js "></script>
-    <script src="js/vendor/what-input.js "></script>
-    <script src="js/vendor/foundation.js "></script>
+    <!-- Driver form and database handling -->
     <script src="js/driver.js "></script>
+
+    <!-- Foundation framework css  -->
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </body>
 
 
