--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Commuter Carpool</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Home</title>
 </head>
 
 <body>
@@ -27,7 +24,7 @@
         <!-- Naigation bar -->
         <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
-                <ul class="menu simple vertical medium-horizontal">
+                <ul class="menu simple medium-horizontal">
                     <li>
                         <a href="http://localhost:8080/">Home</a></li>
                     <li>
@@ -46,15 +43,15 @@
             </div>
         </div>
     </nav>
-
+    <!-- Navigation buttons -->
     <div class="hero-section ">
         <div class="hero-section-text ">
             <h1>DCC</h1>
             <h2>Daily Commuter Carpool</h2>
             <h5>Reduce traffic and air pullution, Help a hard worker, Make journey to work more sociable</h5>
-            <a href="http://localhost:8080/passenger" class="button button-rounded-hover1 ">Join as <br> a Passenger</a>
-            <a href="http://localhost:8080/driver" class="button button-rounded-hover2 ">Join as a <br> Driver</a>
-            <a href="http://localhost:8080/profile" class="button button-rounded-hover5 ">Sign in for<br> User</a>
+            <a href="http://localhost:8080/passenger" class="button button-rounded-hover1 ">Join as <br> a <br> Passenger</a>
+            <a href="http://localhost:8080/driver" class="button button-rounded-hover2 ">Join as<br> a <br> Driver</a>
+            <a href="http://localhost:8080/profile" class="button button-rounded-hover3" style="line-height: 1.5;">User<br>Sign in</a>
         </div>
     </div>
 
@@ -70,8 +67,9 @@
             </div>
         </div>
     </div>
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </body>
-
-</html>
 
 </html>
