--- a/public/Passenger.html
+++ b/public/Passenger.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>passenger register</title>
+    <title>Passenger register</title>
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -27,7 +27,7 @@
         <!-- Naigation bar -->
         <div id="topbar-responsive" class="topbar-responsive-links">
             <div class="top-bar-right">
-                <ul class="menu simple vertical medium-horizontal">
+                <ul class="menu simple medium-horizontal">
                     <li>
                         <a href="http://localhost:8080/">Home</a></li>
                     <li>
@@ -46,7 +46,7 @@
             </div>
         </div>
     </nav>
-
+    <!-- Registration form -->
     <form id="passenger-form" class=" callout text-center ">
         <h2>Passenger Register</h2>
         <div class="floated-label-wrapper ">
@@ -72,10 +72,6 @@
         <input class="button expanded" type="submit" value="Sign up ">
     </form>
 
-    <script src="js/vendor/jquery.js "></script>
-    <script src="js/vendor/what-input.js "></script>
-    <script src="js/vendor/foundation.js "></script>
-    <script src="js/app.js "></script>
     <script src="js/passenger.js"></script>
 </body>
 
