READ ME and code format

--- a/public/profile.html
+++ b/public/profile.html
@@ -103,16 +103,16 @@
                         <th>Work address</th>
                     </tr>
                     <tr>
-                        <td id="pOrigin"></td>
-                        <td id="pDestination"></td>
+                        <td id="pOrigin" class="detour"></td>
+                        <td id="pDestination" class="detour"></td>
                     </tr>
                     <tr class="passengerDirect">
                         <th>Direct distance</th>
                         <th>Direct duration</th>
                     </tr>
                     <tr class="passengerDirect">
-                        <td id="dDistance"></td>
-                        <td id="dDuration"></td>
+                        <td id="dDistance" class="detour"></td>
+                        <td id="dDuration" class="detour"></td>
                     </tr>
                 </table>
                 <h5 id="detour" class="carpool" style="width:95%; padding-left: 10px; color: green; display: none;">
@@ -125,9 +125,9 @@
                         <th>Time difference</th>
                     </tr>
                     <tr>
-                        <td id="detouredDistance">wait...</td>
-                        <td id="detouredTime">wait...</td>
-                        <td id="difference">wait...</td>
+                        <td id="detouredDistance" class="detour">wait...</td>
+                        <td id="detouredTime" class="detour">wait...</td>
+                        <td id="difference" class="detour">wait...</td>
                     </tr>
                 </table>
                 <div style="width:95%">
